made several implementation changes to the project for greater flexibility